fix: footer overflow

--- a/src/style.css
+++ b/src/style.css
@@ -574,7 +574,8 @@ h6 {
 
   .footer .footer__contact-row {
     display: flex;
-    gap: 6.75rem;
+    justify-content: space-between;
+    gap: 2rem;
   }
 
   .footer .footer-contact-container {
